# stte

./: Cargo.toml  README.md
data/: input-flow1.csv  input-flow2.csv  input-invalid1.csv  input-invalid2.csv  input-invalid3.csv  input-invalid4.csv  input-invalid5.csv  input-invalid6.csv  input-invalid7.csv  input-invalid8.csv  input-invalid9.csv  input1.csv  input2.csv  input3.csv  input4.csv  input5.csv  input6.csv  input7.csv  input8.csv  output-flow1.csv  output-flow2.csv  output1.csv  output3.csv  output5.csv  output6.csv  output7.csv
src/: engine.rs  engine.test.rs  main.rs  types.rs
