[package]
name = "stte"
authors = ["Ondrej Hirjak"]
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
rust_decimal = { version = "1.34", features = ["serde-with-str"] }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"

[dev-dependencies]
rust_decimal_macros = "1.34"
